tried to make a correct way to static files, but nothing seems to work. Started a function HideFormulaButtons which should make unclicked buttons disappear and make description visible. It works partly((((

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,45 +1,45 @@
-.button-wrapper {
+.but-bunch {
+    margin: auto;
+}
+
+.btn {
     width: 30%;
-    margin-right: 3%;
-    margin-top: 2%;
-    min-height: 118px;
-}
-
-.wrap-the-text {
     white-space: normal;
 }
 
-.btn.wrap-normal {
-    white-space: normal;
-}
-
-label {
-    width: 100%;
-}
-
-.cogn-descr {
+.descr-genotypes {
     display: none;
+    width: 100%;
 }
 
 .descr-image {
     width: 30%;
-    margin: 0;
+    margin: 2% 0 0;
     white-space: normal;
     font-size: 0.8em;
+    display: inline-block;
 }
 
 .descr {
-    width: 100%;
-    margin: 0;
+    width: 69%;
+    margin: 2% 0 0;
     text-align: center;
     white-space: normal;
+    display: inline-block;
 }
 
-.descr-ok {
-    display: block;
-    margin-top: 5%;
-    margin-left: auto;
-    margin-right: auto;
+.ok-back-buttons {
+    display: inline;
+    margin: 5% auto;
+}
+
+.descr-but {
+    display: inline-block;
+    margin: 5% auto;
+}
+
+.descr-but:first-child {
+    margin-right: 2%;
 }
 
 .genotype-header {
